<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="@color/bg_color">

        <EditText
            android:id="@+id/edtfirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_your_first_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:background="@drawable/round_rect"/>

        <EditText
            android:id="@+id/edtmiddlename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_middle_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect"/>

        <EditText
            android:id="@+id/edtlastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect"/>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_valid_email_id_optional_"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect"/>

        <EditText
            android:id="@+id/edtdob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_dob"
            android:inputType="textEmailAddress"
            android:clickable="true"
            android:focusable="false"
            android:editable="false"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect"/>

        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLength="20"
            android:text="123456"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect"/>
            
        <EditText
            android:id="@+id/edtConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLength="20"
            android:text="123456"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_rect"/>

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/radio_female" />

        </RadioGroup>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/register" />

    </LinearLayout>
</ScrollView>